force-app/main/default/objects/sbaa__TrackedField__c/fields/sbaa__ApprovalRule__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Rule that will generate the Tracked Value for this Tracked Field</description>
        <inlineHelpText>Approval Rule that will generate the Tracked Value for this Tracked Field</inlineHelpText>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Tracked Fields</relationshipLabel>
        <relationshipName>TrackedFields</relationshipName>
        <type>Lookup</type>
    </CustomField>