force-app/main/default/objects/sbaa__TrackedField__c/fields/sbaa__TrackedField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TrackedField__c</fullName>
        <description>A Field (on a Tracked Object) that is being tracked</description>
        <inlineHelpText>A Field (on a Tracked Object) that is being tracked</inlineHelpText>
        <label>Tracked Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>