force-app/main/default/objects/sbaa__TrackedField__c/fields/sbaa__TrackingType__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TrackingType__c</fullName>
        <description>Choose whether all values are tracked or only changes from the previous tracked value.</description>
        <inlineHelpText>Choose whether all values are tracked or only changes from the previous tracked value.</inlineHelpText>
        <label>Tracking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Values</fullName>
                </value>
                <value>
                    <fullName>Any Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>